NXP-27462: small improvements and cleanup